Add Heroku configuration files
Require Python 3. Django and gunicorn webserver specified in
requirements.txt. Procfile will tell Heroku what to run.

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ __pycache__/
 # Distribution / packaging
 .Python
 env/
+venv/
 bin/
 build/
 develop-eggs/
@@ -48,6 +49,7 @@ coverage.xml
 # Django stuff:
 *.log
 *.pot
+secret_key.txt
 
 # Sphinx documentation
 docs/_build/
